# prop-bots

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-compose.yml
config/: example.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  state.rs
crates/brokers/common/: Cargo.toml
crates/brokers/common/src/: lib.rs  simulated.rs
crates/brokers/crypto/: Cargo.toml
crates/brokers/crypto/src/: lib.rs
crates/brokers/gui/: Cargo.toml
crates/brokers/gui/src/: lib.rs
crates/brokers/metatrader/: Cargo.toml
crates/brokers/metatrader/src/: client.rs  lib.rs  protocol.rs
crates/brokers/ninjatrader/: Cargo.toml
crates/brokers/ninjatrader/src/: client.rs  lib.rs  protocol.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  lib.rs  models.rs  traits.rs
crates/data/: Cargo.toml
crates/data/src/: csv_loader.rs  db.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: backtest.rs  lib.rs  metrics.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: atr.rs  bollinger.rs  donchian.rs  ema.rs  lib.rs  macd.rs  rsi.rs  sma.rs  stochastic.rs  vwap.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs  profiles.rs  rules.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: donchian_breakout.rs  lib.rs  ma_crossover.rs
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
dashboard/src/pages/: BacktestRunner.tsx  LiveMonitor.tsx  Overview.tsx  RulesEditor.tsx  StrategyConfig.tsx
data/sample/: ES_sample.csv
migrations/: 20240101000001_initial_schema.sql
mt5-addon/: RustBridge.mq5
