[package]
name = "propbot-data"
description = "Data loading, storage, and normalization layer"
version.workspace = true
edition.workspace = true

[dependencies]
propbot-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
