[package]
name = "propbot-strategies"
description = "Trading strategy implementations (rule-based and ML)"
version.workspace = true
edition.workspace = true

[dependencies]
propbot-core = { workspace = true }
propbot-indicators = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dependencies.ort]
workspace = true
optional = true

[features]
default = []
ml = ["ort"]
