[package]
name = "propbot-brokers-crypto"
description = "Crypto exchange broker adapter (Binance, Bybit, etc.)"
version.workspace = true
edition.workspace = true

[dependencies]
propbot-core = { workspace = true }
propbot-brokers-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
